Replaced methods for JDK11