@@ -7,6 +7,7 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.WebElement;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class EmployeeMapper {
 
@@ -40,7 +41,7 @@ public class EmployeeMapper {
 
     public static Employee mapToEmployeeFromWebElementMobile(WebElement webElement) {
         List<WebElement> cells = webElement.findElements(By.xpath(".//*[@role='cell']"));
-        String[] findId = cells.getFirst().getText().split("\\R");
+        String[] findId = cells.get(0).getText().split("\\R");
         String[] names = cells.get(2).getText().split("\\R");
         String[] name = names[1].split(" ");
         String middleName = null;
@@ -60,12 +61,12 @@ public class EmployeeMapper {
     public static List<Employee> mapListToEmployeesDesktop(List<ExtendedWebElement> elements) {
         return elements.stream()
                 .map(EmployeeMapper::mapToEmployeeFromWebElementDesktop)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static List<Employee> mapListToEmployeesMobile(List<ExtendedWebElement> elements) {
         return elements.stream()
                 .map(EmployeeMapper::mapToEmployeeFromWebElementMobile)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
